# duckdb-firebird

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  extension_config.cmake  vcpkg.json
.github/badges/: downloads.json
.github/workflows/: build-linux-fb-matrix.yml  build-linux.yml  build-windows.yml  release-assets.yml  update-download-badge.yml
bench/: build_env_notes.md  v0.6.1_phase1_catalog.sql  v0.6.1_phase1b_high_latency_probe.sql  v0.6.1_phase1c_rtt_calib.sql  v0.6.1_phase2_fixA_lan.sql  v0.6.1_phase2_fixA_wan.sql
community-extensions/: description.yml
docs/: DOCS_PARITY.md  architecture.md  guide_linux.md  guide_windows.md  review_report_v0.4.md  roadmap.md  test_report.md  usage_guide.md
docs/en/: architecture.md  function_manual.md  guide_linux.md  guide_windows.md  observability.md  release_notes_v0.6.0.md  release_notes_v0.6.1.md  release_notes_v1.0.0.md  release_v0.6.0_plan.md  release_v0.6.1_plan.md  review_report_v0.4.md  roadmap.md  test_report.md  usage_guide.md
docs/pt/: duckdb_1_5_compatibility_plan.md  function_manual.md  guide_linux.md  guide_windows.md  hotfix_v0.5.5_closeout.md  hotfix_v0.5.6_closeout.md  phase1_closeout.md  phase2_closeout.md  phase3_closeout.md  release_v1.0.0_readiness_report.md  roadmap.md  runtime_abi_compatibility_gate.md  usage_guide.md
docs/superpowers/notes/: explain-pushdown-spike.md
docs/superpowers/plans/: 2026-06-19-metadata-bridge-2.0.md  2026-06-22-firebird-explain-pushdown.md  2026-06-23-firebird-health.md  2026-06-23-firebird-type-audit.md  2026-06-23-profile-table-structured-alerts.md  2026-07-02-firebird-index-profile.md  2026-07-02-smart-scan-planning-report.md  2026-07-02-type-lossless-hardening.md  2026-07-15-blob-lossless-fix.md  2026-07-16-ci-fixture-unification.md  2026-07-16-ci-none-charset-fixture.md  2026-07-16-guard-hardening.md  2026-07-19-decfloat-ci-fixture.md  2026-07-20-reconcile-view-fallback.md
docs/superpowers/specs/: 2026-06-19-metadata-bridge-2.0-design.md  2026-06-22-firebird-explain-pushdown-design.md  2026-06-23-firebird-health-design.md  2026-06-23-firebird-type-audit-design.md  2026-06-23-profile-table-structured-alerts-design.md  2026-07-02-firebird-index-profile-design.md  2026-07-02-smart-scan-planning-report-design.md  2026-07-02-type-lossless-hardening-design.md  2026-07-15-blob-lossless-fix-design.md  2026-07-16-ci-fixture-unification-design.md  2026-07-16-ci-none-charset-fixture-design.md  2026-07-16-guard-hardening-design.md  2026-07-19-decfloat-ci-fixture-design.md  2026-07-20-reconcile-view-fallback-design.md
scripts/: build_linux_local.sh  build_matrix.ps1  build_windows_local.bat  check_no_inline_fixture_drift.sh  dist_README.template.txt  fixture_biz4.sql  fixture_common.sql  fixture_create.sql  fixture_create_none.sql  fixture_decfloat.sql  fixture_index_profile.sql  fixture_none_charset.sql  gizmosql_aircache.sh  gizmosql_smoke.sh  maturity_battery.ps1  mkblob_fixture.cpp  package_dist.bat  package_dist_linux.sh  setup_test_firebird.sh  smoke_fixture.sql  update_download_badge.mjs
src/: firebird_client.cpp  firebird_client_loader.cpp  firebird_dbt_sources.cpp  firebird_explain_pushdown.cpp  firebird_extension.cpp  firebird_health.cpp  firebird_index_profile.cpp  firebird_metadata_functions.cpp  firebird_observability.cpp  firebird_profile_table.cpp  firebird_query.cpp  firebird_scanner.cpp  firebird_storage.cpp  firebird_types.cpp  firebird_view_analysis.cpp  firebird_view_analysis.hpp
src/include/: firebird_client.hpp  firebird_client_loader.hpp  firebird_dbt_sources.hpp  firebird_explain_pushdown.hpp  firebird_extension.hpp  firebird_health.hpp  firebird_index_profile.hpp  firebird_metadata_functions.hpp  firebird_observability.hpp  firebird_profile_table.hpp  firebird_query.hpp  firebird_scanner.hpp  firebird_storage.hpp  firebird_types.hpp
test/sql/: firebird_attach.test  firebird_bind_params.test  firebird_blob_lossless.test  firebird_dbt_sources.test  firebird_decfloat.test  firebird_explain_pushdown.test  firebird_health.test  firebird_index_profile.test  firebird_metadata.test  firebird_metadata_bridge.test  firebird_none_charset.test  firebird_observability.test  firebird_paging.test  firebird_pool.test  firebird_pool_stats.test  firebird_predicates.test  firebird_profile_table.test  firebird_scan.test  firebird_type_audit.test  firebird_type_audit_fb4.test
